books/projects/rac/tests/yaml_test/control_flow/if-else-return-not-complete-2.ref.stderr
if-else-return-not-complete-2.cpp:8: syntax error, unexpected RETURN
