books/projects/rac/tests/yaml_test/control_flow/if-else-return-not-complete-2.cpp
// RAC begin

int foo(int a)
{
  if (a)
    a = 2;
  else
    return 1;

  return 0;
}

// RAC end
